# chat

./: README.md
ChatServer/: CMakeLists.txt  makefile
ChatServer/cmake/: utils.cmake
ChatServer/config/: config.ini
ChatServer/include/: AsioIOServicePool.h  ChatGrpcClient.h  ChatServiceImpl.h  LogicSystem.h  MsgNode.h  MysqlDao.h  MysqlMgr.h  RedisMgr.h  Singleton.h  data.h
ChatServer/src/: AsioIOServicePool.cpp  CServer.cpp  ChatGrpcClient.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  UserMgr.cpp  main.cpp
ChatServer2/config/: config.ini
ChatServer2/include/: CServer.h  CSession.h  ConfigMgr.h  DistLock.h  StatusGrpcClient.h  UserMgr.h  chat.h
ChatServer2/src/: CSession.cpp  ChatGrpcClient.cpp  ChatServiceImpl.cpp  ConfigMgr.cpp  DistLock.cpp  LogicSystem.cpp  MsgNode.cpp  StatusGrpcClient.cpp
GateServer/: CMakeLists.txt
GateServer/cmake/: utils.cmake
GateServer/config/: config.ini
GateServer/include/: AsioIOServicePool.h  CServer.h  ConfigMgr.h  HttpConnection.h  LogicSystem.h  MysqlDao.h  MysqlMgr.h  StatusGrpcClient.h  VerifyGrpcClient.h  chat.h
GateServer/src/: AsioIOServicePool.cpp  CServer.cpp  HttpConnection.cpp  LogicSystem.cpp  MysqlDao.cpp  MysqlMgr.cpp  RedisMgr.cpp  StatusGrpcClient.cpp  VerifyGrpcClient.cpp  main.cpp
StatusServer/: CMakeLists.txt
StatusServer/cmake/: utils.cmake
StatusServer/config/: config.ini
StatusServer/include/: AsioIOServicePool.h  ChatGrpcClient.h  ConfigMgr.h  MysqlDao.h  RedisMgr.h  Singleton.h  StatusServiceImpl.h  chat.h
StatusServer/proto/: message.proto
StatusServer/src/: ChatGrpcClient.cpp  ConfigMgr.cpp  MysqlDao.cpp  RedisMgr.cpp  StatusServiceImpl.cpp  main.cpp
VarifyServer/: config.json  email.js  package-lock.json  package.json  proto.js  redis.js  server.js
